<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.movieDetails.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_favorite_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_favorite_shape"
                android:elevation="1dp"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_favorite_border_24" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:weightSum="4.5">


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_poster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />
                    </com.google.android.material.card.MaterialCardView>


                    <Button
                        android:id="@+id/adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.947"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        tools:text="18+" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textAppearance="?textAppearanceBody1"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Movie Title" />

                <RatingBar
                    android:id="@+id/rating"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="3.5" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            android:text="@string/story" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:lineSpacingMultiplier="1.2"
                            android:textAppearance="?attr/textAppearanceCaption"
                            tools:text="Description" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Details"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            tools:text="Details" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center"
                                    android:layout_weight="1"
                                    android:text="@string/original_language"
                                    android:textAppearance="?textAppearanceBody1"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/or_lan"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:textAppearance="?textAppearanceBody1"
                                    tools:text="Original Language" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center"
                                    android:layout_weight="1"
                                    android:text="@string/original_title"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/or_title"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="Original Title" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center"
                                    android:layout_weight="1"
                                    android:text="@string/release_date"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tx_release"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="Original Title" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">
                    <ImageView
                        android:id="@+id/cover_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"/>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>